feat: add timer to the middle and make it work! done: 1. tap `start` to start a new timer; 2. tap `stop` to reset the timer; 3. when hits 0, the timer resets aotumatically.
todos:
1. add break time when the work time is used up;
2. add input area to let user change work time and break time.

--- a/pages/pomodoro/pomodoro.wxml
+++ b/pages/pomodoro/pomodoro.wxml
@@ -2,14 +2,18 @@
 <view class="container">
     <view class="clock-main">
         <view class="clock-container container1">
-            <view class="clock"></view>
+            <view class="clock clock-right" style="animation: {{clockRightStyle}};"></view>
         </view>
         <view class="clock-container container2">
-            <view class="clock"></view>
+            <view class="clock clock-left" style="animation: {{clockLeftStyle}};"></view>
         </view>
         <view class="marker start"></view>
-        <view class="marker end"></view>
+        <view class="marker end" style="animation: {{spotStyle}};"></view>
+        <view class="timer">
+            <text>{{timer}}</text>
+        </view>
     </view>
-    <view class="time"></view>
-    <view class="controller"></view>
+    <view class="controller">
+        <button type="{{currentColor}}" bindtap="switchStatus">{{actionName}}</button>
+    </view>
 </view>
